logo fixed on mobile, text changes

--- a/site/assets/css/style.css
+++ b/site/assets/css/style.css
@@ -164,7 +164,7 @@ body {
 .vertical {
   position: absolute;
   transform: rotate(270deg);
-  left: 0px;
+  left: 5px;
   font-weight: 400;
   top: 28px;
   color: #9ebd5a
@@ -172,13 +172,13 @@ body {
 
 .logo-text {
   width: 150px;
-  padding: 10px 0 0 44px;
+  padding: 11px 0 0 47px;
   color: #9ebd5a
 }
 
 .vertical-menu {
   font-size: 20px;
-  left: 65px;
+  left: 82px;
   top: 18px
 }
 
@@ -485,11 +485,15 @@ input:checked + label span:last-child {
   top: -11px
 }
 
-.last-name {
+.mobile-lastname-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.last-name, .second-last-name {
   font-size: 100px;
   font-weight: 600;
   line-height: 1;
-  margin-bottom: 42px;
 }
 
 .occupation {
@@ -1884,13 +1888,6 @@ textarea.form-control::-webkit-input-placeholder,
   .first-name {
     font-size: 35px;
   }
-  .last-name {
-    font-size: 70px;
-    font-weight: 600;
-    line-height: 0;
-    margin-top: 28px;
-    margin-bottom: 28px;
-  }
   .occupation {
     font-size: 14px;
   }
@@ -1923,6 +1920,14 @@ textarea.form-control::-webkit-input-placeholder,
     font-size: 16px;
     width: 120px;
     padding-top: 5px;
+  }
+
+  .last-name, .second-last-name {
+    font-size: 70px;
+    font-weight: 600;
+    line-height: 0;
+    margin-top: 28px;
+    margin-bottom: 28px;
   }
 
 }
